src/scss/index.scss
@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans');

* {
  box-sizing: border-box;
  width: 100%;
}

/* Generic Classes */

.col {
  display: flex;
  flex-direction: column;
}

.row {
  display: flex;
  flex-direction: row;
}

.all-center {
  text-align: center;
  align-content: center;
  justify-content: center;
  align-items: center;
}

/* Skeletal Styles */

.container {
  margin: 0;
  padding: 5px 20px;
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  /* background-color: #fffac0; */
}

header {
  margin-bottom: 20px;
  font-family: 'Fredericka the Great', cursive;
  color: #545454;
  display: flex;
  flex-direction: column;
}

#app-title {
  margin-bottom: 0;
  font-size: 40px;
  width: 90%;
  cursor: pointer;
  &:hover {
    -webkit-animation: wiggle 1s ease;
    animation: wiggle 1s ease;
    -webkit-animation-iteration-count: 1;
    animation-iteration-count: 1;
  }
}

/* Search Styles */

#search-box, #search-result {
  width: 80%;
}

#search-box {
  padding: 8px 12px;
  border: 1px solid #CCC;
  border-radius: 3px;
}

.movie-item {
  width: 90%;
  margin: 15px;
  padding: 15px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: center;
  border: 1px solid #545454;
  border-radius: 3px;
}

@media only screen and (min-width: 400px) {
  .movie-item {
    width: 40%;
  }
}

@media only screen and (min-width: 1240px) {
  .movie-item {
    width: 22%;
  }
}

.movie-img {
  margin: 5px 10px;
  width: 150px;
  > img {
    width: 100%;
    height: auto;
  }
}

.movie-description {
  font-size: 14px;
  margin-bottom: 15px;
  flex-grow: 1;
  > span:nth-of-type(1) {
    font-size: 18px;
    font-weight: bold;
  }
}

.add-movie {
  padding: 10px 20px;
  color: #ffffff;
  border: none;
  font-family: 'Open Sans', sans-serif;
  border-radius: 3px;
  cursor: pointer;
  background-image: linear-gradient(to right, #5e99ec, #1730bc);
  &:hover {
    box-shadow: 2px 5px 5px #545454;
  }
}

.disable-btn {
  padding: 10px 20px;
  color: #ffffff;
  border: none;
  font-family: 'Open Sans', sans-serif;
  border-radius: 3px;
  background-image: linear-gradient(to right, #f16a6a, #e4564c);
}

.no-result-message {
  border: 1px solid #CCC;
  border-radius: 4px;
  margin: 5px;
  padding: 15px;
}

#movie-list {
  flex-wrap: wrap;
  align-items: stretch;
}

#sorting-section {
  font-size: 14px;
  display: flex;
  justify-content: flex-end;
  padding-right: 60px;
  > * {
    width: auto;
  }
}

footer {
  margin: 10px;
  padding: 15px 10px;
  width: 80%;
  border-radius: 6px;
  color: #ffffff;
  text-align: center;
  background-image: linear-gradient(to right, #ff72a1, #D2465E);
}

main, footer {
  font-family: 'Open Sans', sans-serif;
}

/* Wiggle Animation */
@-webkit-keyframes wiggle {
  15% {
    -webkit-transform: translateX(5px);
    transform: translateX(5px);
  }

  30% {
    -webkit-transform: translateX(-5px);
    transform: translateX(-5px);
  }

  50% {
    -webkit-transform: translateX(3px);
    transform: translateX(3px);
  }

  65% {
    -webkit-transform: translateX(-3px);
    transform: translateX(-3px);
  }

  80% {
    -webkit-transform: translateX(2px);
    transform: translateX(2px);
  }

  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
}


@keyframes wiggle {
  15% {
    -webkit-transform: translateX(5px);
    transform: translateX(5px);
  }

  30% {
    -webkit-transform: translateX(-5px);
    transform: translateX(-5px);
  }

  50% {
    -webkit-transform: translateX(3px);
    transform: translateX(3px);
  }

  65% {
    -webkit-transform: translateX(-3px);
    transform: translateX(-3px);
  }

  80% {
    -webkit-transform: translateX(2px);
    transform: translateX(2px);
  }

  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
}

